--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -49,12 +49,12 @@ img {
   padding: 0 15px;
   border: 1px solid black;
 }
-@media screen and (max-width: 767.98px) {
+@media screen and (min-width: 480px) {
   .container {
     width: 480px;
   }
 }
-@media screen and (min-width: 768px) and (max-width: 1199.98px) {
+@media screen and (min-width: 768px) {
   .container {
     width: 768px;
   }
